Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/TimeCapture__c.object
<CustomObject>
    <fields>
        <fullName>Delta__c</fullName>
        <label>Delta</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>EndTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>StartTime</label>
        <type>DateTime</type>
    </fields>
    <label>TimeCapture</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TimeCapture Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TimeCapture</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>